tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr94134.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr94134.c" (c, x86_64-unknown-linux-gnu)
global a : s32i = 0 [internal, default, align 4, dso_local]
global b : s32i = 1 [internal, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @a : s32i*
    %3 = load %2 : s32i, align 4, volatile
    %4 = inc %3 : s32i [nsw]
    store %4, %2, align 4, volatile
    %5 = get_global @b : s32i*
    %6 = load %5 : s32i, align 4, volatile
    %7 = inc %6 : s32i [nsw]
    store %7, %5, align 4, volatile
    scope {
        %10 = get_global @a : s32i*
        %11 = load %10 : s32i, align 4, volatile
        %12 = const 1 : s32i
        %13 = cmp ne %11, %12 : bool
        %14 = ternary %13 ? { : bool
            %19 = const #true : bool
            yield %19
        } : {
            %15 = get_global @b : s32i*
            %16 = load %15 : s32i, align 4, volatile
            %17 = const 2 : s32i
            %18 = cmp ne %16, %17 : bool
            yield %18
        }
        if %14 {
            call @abort() [all]
            yield
        }
        yield
    }
    %8 = const 0 : s32i
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
